samples/sample-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: sample-httproute
  namespace: default
spec:
  parentRefs:
  - name: sample-gateway
    namespace: istio-system
  rules:
  - matches:
    - path:
        type: Exact
        value: /
    backendRefs:
    - name: sample-service
      port: 80
